Fix vertical spacing of contact methods.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -365,6 +365,10 @@ body {
   font-size: 15px;
 }
 
+.contact-method {
+  margin-bottom: 40px;
+}
+
 #logo {
   width: 100px;
 }
